// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`checkTN_TSVDataRow() should fail  1`] = `
Object {
  "noticeList": Array [
    Array [
      888,
      "GEN",
      "1",
      "8",
      "Error loading SupportReference TA link",
      -1,
      "figs-activepassive",
      " in SupportReference that was supplied translate/figs-activepassive/01.md: Error: No available storage method found.",
    ],
    Array [
      889,
      "GEN",
      "1",
      "8",
      "Unable to find SupportReference TA link",
      -1,
      "figs-activepassive",
      " in SupportReference that was supplied translate/figs-activepassive/01.md",
    ],
    Array [
      550,
      "GEN",
      "1",
      "8",
      "Invalid zero occurrence field when we have an original quote",
      -1,
      "",
      " that was supplied",
    ],
    Array [
      885,
      "GEN",
      "1",
      "8",
      "Error loading OccurrenceNote TA link",
      -1,
      "[[rc://en/ta/man/translate/figs-activepassive]]",
      " in OccurrenceNote that was supplied translate/figs-activepassive/01.md: Error: No available storage method found.",
    ],
    Array [
      886,
      "GEN",
      "1",
      "8",
      "Unable to find OccurrenceNote TA link",
      -1,
      "[[rc://en/ta/man/translate/figs-activepassive]]",
      " in OccurrenceNote that was supplied translate/figs-activepassive/01.md",
    ],
    Array [
      885,
      "GEN",
      "1",
      "8",
      "Error loading OccurrenceNote TA link",
      -1,
      "[[rc://en/ta/man/translate/figs-imperative]]",
      " in OccurrenceNote that was supplied translate/figs-imperative/01.md: Error: No available storage method found.",
    ],
    Array [
      886,
      "GEN",
      "1",
      "8",
      "Unable to find OccurrenceNote TA link",
      -1,
      "[[rc://en/ta/man/translate/figs-imperative]]",
      " in OccurrenceNote that was supplied translate/figs-imperative/01.md",
    ],
  ],
}
`;

exports[`checkTN_TSVDataRow() should fail invalid chapter 1`] = `
Object {
  "noticeList": Array [
    Array [
      978,
      "GEN",
      1,
      "8",
      "Wrong 'GIN' book code",
      -1,
      "",
      " (expected 'GEN') that was supplied",
    ],
    Array [
      823,
      "GEN",
      1,
      "8",
      "Invalid large chapter number",
      -1,
      "200",
      " that was supplied",
    ],
    Array [
      812,
      "GEN",
      1,
      "8",
      "Unable to check verse number",
      -1,
      "",
      " '9' that was supplied",
    ],
    Array [
      778,
      "GEN",
      1,
      "8",
      "ID should be exactly 4 characters",
      -1,
      "",
      " (not 5) that was supplied",
    ],
    Array [
      888,
      "GEN",
      1,
      "8",
      "Error loading SupportReference TA link",
      -1,
      "Laugh",
      " in SupportReference that was supplied translate/Laugh/01.md: Error: No available storage method found.",
    ],
    Array [
      889,
      "GEN",
      1,
      "8",
      "Unable to find SupportReference TA link",
      -1,
      "Laugh",
      " in SupportReference that was supplied translate/Laugh/01.md",
    ],
    Array [
      276,
      "GEN",
      1,
      "8",
      "Missing OrigQuote field",
      -1,
      "",
      " that was supplied",
    ],
    Array [
      792,
      "GEN",
      1,
      "8",
      "Invalid '17' occurrence field",
      -1,
      "",
      " that was supplied",
    ],
    Array [
      177,
      "GEN",
      1,
      "8",
      "Unexpected doubled . characters",
      11,
      "…lipse...",
      " in 'GLQuote' that was supplied",
    ],
    Array [
      107,
      "GEN",
      1,
      "8",
      "Unexpected leading break",
      0,
      "<br>Boo ho…",
      " in 'line 1' in OccurrenceNote that was supplied",
    ],
    Array [
      177,
      "GEN",
      1,
      "8",
      "Unexpected doubled , characters",
      11,
      "…o hoo,,<br…",
      " in 'line 1' in OccurrenceNote that was supplied",
    ],
    Array [
      191,
      "GEN",
      1,
      "8",
      "Unexpected ! character after space",
      30,
      "… shoe !",
      " in 'line 1' in OccurrenceNote that was supplied",
    ],
  ],
}
`;

exports[`checkTN_TSVDataRow() should fail lots of checks 1`] = `
Object {
  "noticeList": Array [
    Array [
      978,
      "GEN",
      "1",
      "8",
      "Wrong 'GIN' book code",
      -1,
      "",
      " (expected 'GEN') that was supplied",
    ],
    Array [
      823,
      "GEN",
      "1",
      "8",
      "Invalid large chapter number",
      -1,
      "200",
      " that was supplied",
    ],
    Array [
      812,
      "GEN",
      "1",
      "8",
      "Unable to check verse number",
      -1,
      "",
      " '9' that was supplied",
    ],
    Array [
      778,
      "GEN",
      "1",
      "8",
      "ID should be exactly 4 characters",
      -1,
      "",
      " (not 5) that was supplied",
    ],
    Array [
      888,
      "GEN",
      "1",
      "8",
      "Error loading SupportReference TA link",
      -1,
      "Laugh",
      " in SupportReference that was supplied translate/Laugh/01.md: Error: No available storage method found.",
    ],
    Array [
      889,
      "GEN",
      "1",
      "8",
      "Unable to find SupportReference TA link",
      -1,
      "Laugh",
      " in SupportReference that was supplied translate/Laugh/01.md",
    ],
    Array [
      276,
      "GEN",
      "1",
      "8",
      "Missing OrigQuote field",
      -1,
      "",
      " that was supplied",
    ],
    Array [
      792,
      "GEN",
      "1",
      "8",
      "Invalid '17' occurrence field",
      -1,
      "",
      " that was supplied",
    ],
    Array [
      177,
      "GEN",
      "1",
      "8",
      "Unexpected doubled . characters",
      11,
      "…lipse...",
      " in 'GLQuote' that was supplied",
    ],
    Array [
      107,
      "GEN",
      "1",
      "8",
      "Unexpected leading break",
      0,
      "<br>Boo ho…",
      " in 'line 1' in OccurrenceNote that was supplied",
    ],
    Array [
      177,
      "GEN",
      "1",
      "8",
      "Unexpected doubled , characters",
      11,
      "…o hoo,,<br…",
      " in 'line 1' in OccurrenceNote that was supplied",
    ],
    Array [
      191,
      "GEN",
      "1",
      "8",
      "Unexpected ! character after space",
      30,
      "… shoe !",
      " in 'line 1' in OccurrenceNote that was supplied",
    ],
  ],
}
`;

exports[`checkTN_TSVDataRow() should fail missing original quote 1`] = `
Object {
  "noticeList": Array [
    Array [
      276,
      "GEN",
      "1",
      "9",
      "Missing OrigQuote field",
      -1,
      "",
      " that was supplied",
    ],
  ],
}
`;
